--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,17 @@
-# Database Configuration
 DATABASE_URL=postgresql://user:password@host:port/db
 POSTGRES_DB=xxx
 POSTGRES_USER=xxx
 POSTGRES_PASSWORD=xxx
-
-# Redis Configuration
 REDIS_URL=redis://localhost:xxx/0
 REDIS_PASSWORD=xxx
-
-# JWT Configuration
 SECRET_KEY=secret_key
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 REFRESH_TOKEN_EXPIRE_MINUTES=10080
-
-# Application Configuration
 ENVIRONMENT=development
 DEBUG=true
-
-# API Configuration
 API_V1_STR=/api/v1
 PROJECT_NAME=Personal Finance API
-
-# CORS Configuration
 BACKEND_CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
-
-# Rate Limiting
 RATE_LIMIT_PER_MINUTE=60 
+HOST=0.0.0.0
+PORT=8000
